Add Devise; design flash messages

--- a/app/views/home/land.html.erb
+++ b/app/views/home/land.html.erb
@@ -1,9 +1,8 @@
-<%= render 'common/navigation' %>
-<section id = "home">
-  <div class="container">
+  <%= render 'common/navigation' %>
+  <section id = "home">
     <div class="row">
-      <h1 id = "school" class="pos"> Donate directly to a homeless person in need. </h1>
-      <!-- <h1 id ="h1" class="pos">Give your child a head start for life .</h1> -->
+      <div class="container">
+        <h1 id = "title" class="pos"> Donate directly to a homeless person in need. </h1>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
