--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,8 +1,23 @@
 body {
   font-family: 'Open Sans', sans-serif;
   overflow-x: hidden;
+  /*margin-top: 50px;*/
 }
 
+#notice_wrapper {
+  position: absolute;
+  width: 100%;
+  background: rgba(208, 103, 82, .85);
+  z-index: 999;
+
+  p {
+    color: #fff;
+    font-size: 18px;
+    font-weight: 600;
+    text-align: center;
+    padding: 20px;
+  }
+}
 #home {
   min-height: 100vh;
   background-image: image-url("man9.jpg");
@@ -16,14 +31,23 @@ body {
   height: 50px;
   background-color: transparent;
   border-color: transparent;
+  z-index: 0;
 }
 
-.nav-color {
+.navbar-black {
+  height: 50px;
   background-color: #444;
+  }
+
+.nav > li > a:hover, .nav > li > a:focus {
+  background-color: transparent;
 }
 
 .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus, .navbar-inverse .navbar-nav > li > a {
-  background-color: transparent;
+  color: #fff;
+}
+
+.navbar-black .navbar-nav > .active > a, .navbar-black .navbar-nav > .active > a:hover, .navbar-black .navbar-nav > .active > a:focus, .navbar-black .navbar-nav > li > a {
   color: #fff;
 }
 
@@ -33,14 +57,16 @@ body {
   font-weight: 600;
   text-transform: uppercase;
 }
-
-.navbar-inverse .navbar-brand, .navbar-inverse .navbar-brand:hover, .navbar-inverse .navbar-brand:focus {
+.navbar-brand,.navbar-brand:hover,.navbar-brand:active,.navbar-brand:focus {
   color: #fff;
 }
 
 .navbar-inverse .navbar-brand {
+  color: #fff;
+}
+
+.navbar-brand {
   border: 1px solid #fff;
-  box-shadow: 2px 1px 9px 2px #DCD3D3;
   padding: 5px 14px;
   height: 34px;
   margin-top: 7px;
@@ -53,8 +79,8 @@ body {
   color: #fff;
 }
 
-#school {
-  margin-left: 8vw;
+#title {
+  margin-left: 9vw;
   font-size: 3em;
 }
 
@@ -62,32 +88,10 @@ body {
   font-family: 'Raleway', sans-serif;
 }
 
-.button {
-  margin-top: 20px;
-  margin-left: 8vw;
-}
-
-#signup {
-  margin-right:1vw;
-  font-weight: bold;
-}
-
-#login {
-  margin-top: 20px;
-  margin-left: 1vw;
-  font-weight: bold;
-}
-
-.or {
-  position: relative;
-  top: 25vh;
-  color: #fff;
-  font-weight: bold;
-}
-
 .alert-success {
   margin-bottom:0;
 }
+
 
 
 
