--- a/app/views/common/_navigation_black.html.erb
+++ b/app/views/common/_navigation_black.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-black navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -18,7 +18,6 @@
           <li><%= link_to "SignUp", new_user_registration_path %></li>
           <li><%= link_to "Login", new_user_session_path %></li>
           <% end %>
-
         </ul>
       </div><!--/.nav-collapse -->
     </div>
