--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,27 @@
 
 </head>
 <body>
-
-<%= yield %>
-
-</body>
-</html>
+<% if !current_page?(root_path) %>
+    <%= render 'common/navigation_black' %>
+<% end %>
+  <% if alert %>
+  <div id="notice_wrapper">
+    <p class="alert"><%= alert %></p>
+  </div>
+  <% elsif notice %>
+  <div id="notice_wrapper">
+    <p class="notice"><%= notice %></p>
+  </div>
+  <% end %>
+  <%= yield %>
+  <script>
+    $(document).ready(function() {
+      setTimeout(function() {
+        $('#notice_wrapper').fadeOut("slow", function() {
+          $this.remove();
+        })
+      }, 4000)
+    })
+    </script
+  </body>
+  </html>
