--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,15 +1,30 @@
-<div class="row margin-top-row">
+<div class="row margin-top-row projects-row">
   <div class="container">
     <% if @projects.any? %>
     <% @projects.each do |project| %>
     <div class="col-md-4">
       <div class="project-box">
-        <%= image_tag(project.image_url, class: "user-image img-responsive") %>
-        <h3><%= project.title %></h3>
+        <%= image_tag(project.image_url, class: "img-responsive") %>
+        <div class="project-title-button">
+          <%= link_to project_path(project) do %>
+            <h3> <%= project.title %> </h3>
+          <% end %>
+          <%= link_to "DONATE", '#', class: "donate-btn btn btn-success btn-sm pull-right" %>
+        </div>
         <p><%= project.short_description %></p>
+        <hr>
+        <div class="progress">
+          <div class="progress-bar progress-bar-success" role="progressbar"
+          aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%">
+          40%
+        </div>
+      </div>
+      <div class="col-md-offset-2 col-md-10">
+      <%= fa_icon "inr", text: "200" %><span class="raised">raised of</span> <%= fa_icon "inr", text: project.goal %>
       </div>
     </div>
-    <% end %>
-    <% end %>
   </div>
+  <% end %>
+  <% end %>
+</div>
 </div>
