--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -15,12 +15,12 @@
         <hr>
         <div class="progress">
           <div class="progress-bar progress-bar-success" role="progressbar"
-          aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%">
-          40%
+          aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:<%= (project.amount_raised)/(project.goal) * 100 %>%">
+          <%= ((project.amount_raised)/(project.goal.to_i) * 100).to_i %>%
         </div>
       </div>
       <div class="col-md-offset-2 col-md-10">
-      <%= fa_icon "inr", text: "200" %><span class="raised">raised of</span> <%= fa_icon "inr", text: project.goal %>
+      <%= fa_icon "inr", text: project.amount_raised %><span class="raised">raised of</span> <%= fa_icon "inr", text: project.goal.to_i %>
       </div>
     </div>
   </div>
