--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -13,15 +13,20 @@
       </div>
       <div class="col-md-5">
         <div class="project-right-box">
-          <h3><%= fa_icon "inr", text: "200" %></h3>
+          <h3><%= fa_icon "inr", text: @project.amount_raised %></h3>
           <h4>Raised of <%= fa_icon "inr", text: @project.goal %> Goal</h4>
           <div class="progress">
             <div class="progress-bar progress-bar-success" role="progressbar"
-            aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%">
-            40%
+            aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:<%= (@project.amount_raised)/(@project.goal) * 100 %>%">
+            <%= ((@project.amount_raised)/(@project.goal) * 100).to_i %>%
           </div>
         </div>
-        <h4 class= "donation-needed"><%= fa_icon "inr", text: "230" %> still needed</h4>
+        <h4 class= "donation-needed"><%= fa_icon "inr", text: @project.amount_needed == nil ? @project.goal.to_i : @project.amount_needed %> still needed</h4>
+
+        <%= simple_form_for [@project, @donation] do |f| %>
+        <%= f.input :amount %>
+        <%= f.button :submit, "Donate", class: "btn btn-success" %>
+        <% end %>
 
       </div>
     </div>
