--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -1,11 +1,24 @@
 .project-box {
-  padding: 12px 12px 25px 12px;
+  padding: 12px 12px 35px 12px;
   border: 1px solid #eee;
 }
 
 .raised {
   margin-left: 7px;
   margin-right: 7px;
+}
+
+.donate-btn-show {
+  background-color: transparent;
+  border:2px solid #70c46f;
+  width: 100%;
+  color: green;
+  font-weight: bolder;
+
+  &:hover {
+    color: #fff;
+    font-weight: bolder;
+  }
 }
 
 .projects-row {
@@ -62,5 +75,55 @@
   .donation-needed {
     color: #f0ad4e;
     font-weight: bold;
+    display:inline;
   }
+
+  .backers {
+    color: rgba(33, 80, 51, 0.83);
+    margin-bottom: 15px;
+    font-weight: bold;
+  }
+
+  .amount-raised {
+    color: rgba(156, 83, 70, 0.93);
+    font-weight: bolder;
+  }
+}
+
+.money-raised {
+  display: inline;
+  margin: 0;
+  color: rgba(109,105,105,0.87);
+}
+
+.days-left {
+  font-size: 16px;
+  color: #f0ad4e;
+}
+
+.ends-on {
+  color: #C5924A;
+}
+
+.fa-clock-o {
+  color: #f0ad4e;
+}
+
+.progress {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.index-money-raised {
+  margin-bottom: 15px;
+  font-weight:bold;
+  color: rgba(109, 105, 105, 0.87);
+  font-size: 16px;
+}
+
+.fa-heart {
+  color: #BB3F3F;
+  position: relative;
+  left: -10px;
+
 }
