--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -8,24 +8,31 @@
         <div class="project-image">
           <%= image_tag(@project.image_url, class: "img-responsive") %>
           <hr>
+          <h4><b>My Story</b></h4>
           <p><%= @project.description %></p>
         </div>
       </div>
       <div class="col-md-5">
         <div class="project-right-box">
-          <h3><%= fa_icon "inr", text: @project.amount_raised %></h3>
-          <h4>Raised of <%= fa_icon "inr", text: @project.goal %> Goal</h4>
+          <h3 class= "amount-raised"><%= fa_icon "inr", text: @project.amount_raised %></h3>
+          <h4 class="money-raised">Raised of <%= fa_icon "inr", text: @project.goal.to_i %> Goal</h4>
+          <h4 class="money-raised pull-right days-left"><%= fa_icon "clock-o", text: (@project.ends_on.to_date - Date.today).to_i %> days left</h4>
           <div class="progress">
             <div class="progress-bar progress-bar-success" role="progressbar"
             aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:<%= (@project.amount_raised)/(@project.goal) * 100 %>%">
             <%= ((@project.amount_raised)/(@project.goal) * 100).to_i %>%
           </div>
         </div>
-        <h4 class= "donation-needed"><%= fa_icon "inr", text: @project.amount_needed == nil ? @project.goal.to_i : @project.amount_needed %> still needed</h4>
-
+        <div class="col-md-6">
+          <h4 class= "donation-needed"><%= fa_icon "inr", text: @project.amount_needed == nil ? @project.goal.to_i : @project.amount_needed %> still needed</h4>
+        </div>
+        <div class="col-md-6">
+          <span class="pull-right backers"><%= @backers %> <%= 'Supporter'.pluralize(@backers) %></span>
+        </div>
+        
         <%= simple_form_for [@project, @donation] do |f| %>
-        <%= f.input :amount %>
-        <%= f.button :submit, "Donate", class: "btn btn-success" %>
+        <%= f.input :amount, label: false, placeholder: "Amount (in Rs.)" %>
+        <%= f.button :submit, "Donate", class: "donate-btn-show btn btn-success" %>
         <% end %>
 
       </div>
