Add wysiwyg; improved design

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -127,3 +127,15 @@
   left: -10px;
 
 }
+
+.create-project {
+  width: 100%;
+}
+
+.project-desc {
+  color:#585353;
+}
+
+.project-short-desc {
+  color: #635D5D;
+}
