--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import 'animate';
+@import "bootstrap-wysihtml5/bootstrap3-wysihtml5";
 @import "home";
 @import "user";
 @import "projects";
