--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,7 +2,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   overflow-x: hidden;
   font-size: 16px;
-  /*margin-top: 50px;*/
+  margin-bottom: 150px;
 }
 
 a {
@@ -36,7 +36,7 @@ a {
     font-size: 18px;
     font-weight: 600;
     text-align: center;
-    margin-top: -10px;
+    margin-top: -15px;
 
   }
 }
@@ -59,7 +59,7 @@ a {
 .navbar-black {
   height: 50px;
   background-color: #444;
-  z-index: 0;
+  z-index: 200;
 }
 
 .nav > li > a:hover, .nav > li > a:focus {
