--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,9 @@
 
 </head>
 <body>
-<% if !current_page?(root_path) %>
-    <%= render 'common/navigation_black' %>
-<% end %>
+  <% if !current_page?(root_path) %>
+  <%= render 'common/navigation_black' %>
+  <% end %>
   <% if alert %>
   <div id="notice_wrapper">
     <p class="alert"><%= alert %></p>
@@ -26,14 +26,9 @@
   <% end %>
   <%= yield %>
   <script>
-    $(document).ready(function() {
-      new WOW().init();
-      setTimeout(function() {
-        $('#notice_wrapper').fadeOut("slow", function() {
-          $this.remove();
-        })
-      }, 4000)
-    })
-    </script
+    
+
+    
+    </script>
   </body>
   </html>
