--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -4,22 +4,22 @@
     <% @projects.each do |project| %>
     <div class="col-md-4">
       <div class="project-box">
+        <%= link_to project_path(project) do %>
         <%= image_tag(project.image_url, class: "img-responsive") %>
         <div class="project-title-button">
-          <%= link_to project_path(project) do %>
           <h3> <%= project.title %> </h3>
+          <%= link_to "DONATE", project_path(project), class: "donate-btn btn btn-success btn-sm pull-right" %>
           <% end %>
-          <%= link_to "DONATE", '#', class: "donate-btn btn btn-success btn-sm pull-right" %>
         </div>
         <p class="ends-on"><%= fa_icon "clock-o", text: (project.ends_on.to_date - Date.today).to_i %> days left</p>
-        <p><%= project.short_description %></p>
+        <p class="project-short-desc"><%= project.short_description %></p>
         <div class="progress">
           <div class="progress-bar progress-bar-success" role="progressbar"
           aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:<%= (project.amount_raised)/(project.goal) * 100 %>%">
           <%= ((project.amount_raised)/(project.goal) * 100).to_i %>%
         </div>
       </div>
-        <hr>
+      <hr>
       <div class="col-md-offset-2 col-md-10">
         <h5 class="index-money-raised"><%= fa_icon "heart", class: "wow fadeIn", data: {'wow-duration': '2s','wow-offset': 10, 'wow-iteration': 10} %><%= fa_icon "inr", text: project.amount_raised %><span class="raised">raised of</span> <%= fa_icon "inr", text: project.goal.to_i %></h5>
       </div>
