--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,14 +1,16 @@
 <div class="row margin-top-row">
   <div class="container">
-    <div class="col-md-offset-3 col-md-6">
+    <div class="col-md-offset-2 col-md-8">
+      <h2 class="text-center" style="color: #5A5454">Add Project</h2>
+
       <%= simple_form_for @project, :html=> {class: 'form-horizontal'} do |f| %>
-      <%= f.input :title %>
-      <%= f.input :short_description %>
-      <%= f.input :description %>
-      <%= f.input :image_url %>
-      <%= f.input :goal %>
-      <%= f.input :ends_on %>
-      <%= f.button :submit, input_html: { class: 'btn btn-primary' } %>
+      <%= f.input :title, label: false, placeholder: "Your Name" %>
+      <%= f.input :short_description, label: false, placeholder: "I want to raise money for . . ." %>
+      <%= f.input :description, as: :wysihtml5, label: false, placeholder: "Your Story" %>
+      <%= f.input :image_url, label: false, placeholder: "Image URL" %>
+      <%= f.input :goal, label: false, placeholder: "Amount you want to raise (in Rs.)" %>
+      <%= f.input :ends_on, label: "End date for this project" %>
+      <%= f.button :submit, "Add Project", class: 'btn btn-primary create-project'  %>
       <% end %>
     </div>
   </div>
