--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -9,7 +9,7 @@
           <%= image_tag(@project.image_url, class: "img-responsive") %>
           <hr>
           <h4><b>My Story</b></h4>
-          <p><%= @project.description %></p>
+          <p class="project-desc">"<%= @project.description %>" - <span style="color:#5A5151"><b><%= @project.title %></b></span></p>
         </div>
       </div>
       <div class="col-md-5">
@@ -31,7 +31,7 @@
         </div>
         
         <%= simple_form_for [@project, @donation] do |f| %>
-        <%= f.input :amount, label: false, placeholder: "Amount (in Rs.)" %>
+        <%= f.input :amount, required: true, label: false, placeholder: "Amount (in Rs.)" %>
         <%= f.button :submit, "Donate", class: "donate-btn-show btn btn-success" %>
         <% end %>
 
